- upgrades to 4.3, zest updates, support for SLF4J logging